12-kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: monitoring
  labels:
    app: kube-state-metrics
spec:
  selector:
    app: kube-state-metrics
  ports:
  - name: main-port
    port: 8080
    targetPort: main-port
    protocol: TCP
  - name: telemetry-port
    port: 8081
    targetPort: telemetry-port
    protocol: TCP
  type: ClusterIP
